# apollinare_gestionale

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  PROGRESS.md  cloudbuild.yaml  pyproject.toml  requirements.txt
deploy/: Dockerfile  cloud_run_service.yaml
src/config/: settings.py
src/db/: bigquery.py
src/gateway/: main.py
src/gateway/routers/: catalogo.py  dashboard.py  eventi.py  lista_carico.py  lookup.py  reportistica.py  scheda.py  tabelle.py
src/models/: articolo.py  evento.py  scheda.py
src/services/: cache.py  calcolo_lista.py  calcolo_preventivo.py
tests/: conftest.py
